--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>Бесконечное лето 2 | Шахматы</title>
         <link rel="icon" href="favicon.ico" sizes="any">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <link rel="manifest" href="manifest.json" />
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta
           name="description"           
