--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta
           name="description"           
-          content="Бесконечное лето 2 | Шахматы">
+          content="Сыграйте в Бесконечное лето 2 | Шахматная доска с фигурами из персонажей визуальной новеллы Бесконечное лето">
+
+          <meta
+          name="keywords"
+          content="бесконечное лето, игра, 2, шахматы, онлайн, яндекс игры, визуальная новелла,"
+        />
+        <meta name="robots" content="index, follow" />
+        <meta name="author" content="Евсеенко Илья | LencoDigitexer" />
 
         <!-- Yandex.Metrika counter -->
         <script type="text/javascript" >
