--- a/index.html
+++ b/index.html
@@ -243,6 +243,9 @@
                                     <p class="text-align-center"> Copyright &copy 2024
                                         <a href="https://github.com/LencoDigitexer/everlasting-summer-2">lencodigitexer</a> 
                                     </p>
+                                    <p class="text-align-center"> По мотивам 
+                                        <a href="https://vk.com/wall-62816733_3605808" target="_blank">данного мема</a> 
+                                    </p>
                                 </div>
                             </div>
                         </div>
